FieldLayout: Correct rendering of multiline messages in MediaWiki theme
Previously the icon would appear above the message, instead of next to it.

--- a/src/themes/mediawiki/layouts.less
+++ b/src/themes/mediawiki/layouts.less
@@ -82,13 +82,16 @@
 		> li {
 			margin: 0;
 			padding: 0;
+			display: table;
 		}
 
 		.oo-ui-iconWidget {
-			margin-right: 0.5em;
+			display: table-cell;
+			border-right: 0.5em solid transparent;
 		}
 
 		.oo-ui-labelWidget {
+			display: table-cell;
 			padding: 0;
 			line-height: 1.875em;
 			vertical-align: middle;
